--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -213,7 +213,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Kehinde Oluwaseun Emmanuel</a>.
+    Coded by <a href="https://github.com/Itzemmadox">Kehinde Oluwaseun Emmanuel</a>.
   </div>
 </body>
 </html>
